--- a/Program/js/.devcontainer/devcontainer.json
+++ b/Program/js/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "JS",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "docker.io/ben0i0d/denv:js" 
+	"image": "docker.io/ben0i0d/cenv:js" 
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
