--- a/Program/r/.devcontainer/devcontainer.json
+++ b/Program/r/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "r",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "docker.io/ben0i0d/denv:r" 
+	"image": "docker.io/ben0i0d/cenv:r" 
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
