--- a/Program/python/.devcontainer/devcontainer.json
+++ b/Program/python/.devcontainer/devcontainer.json
@@ -1,19 +1,13 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/debian
+// For format details, see https://aka.ms/devcontainer.json. 
+// For config options, see the README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
 	"name": "python",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "docker.io/ben0i0d/cenv:python" 
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	
+	"image": "docker.io/ben0i0d/cenv:python",
+	// Configure vscode-extensions.
+	"customizations": {
+		"vscode": {
+		  "extensions": ["ms-python.python", "donjayamanne.python-environment-manager", "ms-python.vscode-pylance", "ms-toolsai.jupyter"]
+		}
+	  }
 }
