--- a/base/rocm/Dockerfile
+++ b/base/rocm/Dockerfile
@@ -18,7 +18,7 @@ RUN sed -i "s@//.*archive.ubuntu.com@//${UBUNTU_MIRROR}@g" /etc/apt/sources.list
     echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] http://repo.radeon.com/rocm/apt/${VERSION} noble main" | tee --append /etc/apt/sources.list.d/rocm.list && \
     echo "Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600" | tee /etc/apt/preferences.d/rocm-pin-600 && \
     # Install ROCm-ml-libraries
-    apt-get update &&  apt-get install -y --no-install-recommends rocm-ml-libraries && \
+    apt-get update &&  apt-get install -y rocm-ml-libraries && \
     apt-get clean && rm -rf /var/lib/apt/lists/* && \
     # Configure the system linker by indicating where to find the shared objects 
     echo "/opt/rocm/lib\n/opt/rocm/lib64" >  /etc/ld.so.conf.d/rocm.conf
