--- a/GS/steam/steam_wine/Dockerfile
+++ b/GS/steam/steam_wine/Dockerfile
@@ -1,4 +1,8 @@
 FROM eoelab.org:1027/ben0i0d/cenv:steam
 
+USER root
+
 RUN apt-get update --yes && apt-get install --yes --no-install-recommends wine && \
     apt-get clean && rm -rf /var/lib/apt/lists/* 
+
+USER ${USER}
