--- a/GS/mc/jre/11/Dockerfile
+++ b/GS/mc/jre/11/Dockerfile
@@ -1,4 +1,4 @@
-FROM eoelab.org:1027/ben0i0d/cenv:base AS builder
+FROM eoelab.org:1027/eoeair/cenv:base AS builder
 
 USER root
 
@@ -7,7 +7,7 @@ RUN apt-get update --yes && apt-get install --yes gnupg curl && \
     echo "deb [signed-by=/usr/share/keyrings/azul.gpg] https://repos.azul.com/zulu/deb stable main" | tee /etc/apt/sources.list.d/zulu.list && \
     apt-get update --yes && apt-get install --yes --no-install-recommends zulu11-ca-jre-headless  
 
-FROM eoelab.org:1027/ben0i0d/cenv:base
+FROM eoelab.org:1027/eoeair/cenv:base
 
 USER root
 
