--- a/Program/cpp/.devcontainer/devcontainer.json
+++ b/Program/cpp/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "cpp",
 	
-	"image": "docker.io/ben0i0d/cenv:cpp",
+	"image": "ghcr.io/eoeair/cenv:cpp",
 
 	// Configure vscode-extensions.
 	"customizations": {
