--- a/Program/julia/Dockerfile
+++ b/Program/julia/Dockerfile
@@ -1,10 +1,10 @@
-FROM eoelab.org:1027/ben0i0d/cenv:python AS builder
+FROM eoelab.org:1027/eoeair/cenv:python AS builder
 
 # install Julia packages in /opt/julias
 RUN apt-get update --yes && apt-get install --yes --no-install-recommends gnupg && \
     pip install jill && jill install --confirm 1
 
-FROM eoelab.org:1027/ben0i0d/cenv:base
+FROM eoelab.org:1027/eoeair/cenv:base
 
 COPY --from=builder /opt/julias/ /opt/julias/
 
