--- a/Program/js/Dockerfile
+++ b/Program/js/Dockerfile
@@ -1,4 +1,4 @@
-FROM eoelab.org:1027/ben0i0d/cenv:base
+FROM eoelab.org:1027/eoeair/cenv:base
 
 RUN apt-get update --yes && apt-get install --yes --no-install-recommends nodejs npm && apt-get clean && rm -rf /var/lib/apt/lists/* && \
     npm config set registry https://registry.npmmirror.com
