--- a/base/rocm/.devcontainer/devcontainer.json
+++ b/base/rocm/.devcontainer/devcontainer.json
@@ -2,6 +2,6 @@
 // For config options, see the README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
 	"name": "rocm",
-	"image": "eoelab.org:1027/ben0i0d/cenv:rocm",
+	"image": "eoelab.org:1027/eoeair/cenv:rocm",
 	"runArgs": ["--device","/dev/kfd", "--device","/dev/dri", "--security-opt", "seccomp=unconfined", "--shm-size","4G"]
 }
