--- a/Renv/llama/Dockerfile
+++ b/Renv/llama/Dockerfile
@@ -1,4 +1,4 @@
-FROM eoelab.org:1027/ben0i0d/cenv:cpp AS builder
+FROM eoelab.org:1027/eoeair/cenv:cpp AS builder
 
 USER root
 
@@ -8,7 +8,7 @@ RUN apt-get update --yes && apt-get install --yes cmake build-essential git && \
     cmake -B build -DBUILD_SHARED_LIBS=OFF && cmake --build build --config Release -j $(nproc) && \
     mv build/bin/* /usr/local/bin/
 
-FROM eoelab.org:1027/ben0i0d/cenv:base
+FROM eoelab.org:1027/eoeair/cenv:base
 
 EXPOSE 80
 
@@ -16,9 +16,3 @@ COPY --from=builder /usr/local/bin/llama-server /usr/local/bin/llama-server
 
 RUN apt-get update --yes && apt-get install --yes --no-install-recommends libgomp1 && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
-
-HEALTHCHECK CMD [ "curl", "-f", "http://localhost:8080/health" ]
-
-ENTRYPOINT [ "llama-server" ]
-
-CMD ["-m", "/models/ggml-model-q4_0.gguf", "--port", "80", "--host", "0.0.0.0", "-n", "1024"]
