--- a/Renv/jupyterlite/Dockerfile
+++ b/Renv/jupyterlite/Dockerfile
@@ -1,5 +1,10 @@
 FROM eoelab.org:1027/eoeair/cenv:python
 
-RUN pip install jupyterlite-core && \
-    pip install jupyterlite-pyodide-kernel && \
-    pip cache purge 
+EXPOSE 8000
+
+WORKDIR /opt
+
+RUN pip install jupyterlite-core jupyterlab_server jupyterlite-pyodide-kernel && pip cache purge && \
+    jupyter lite build
+
+CMD [ "jupyter", "lite", "serve" ]
