--- a/Program/julia/.devcontainer/devcontainer.json
+++ b/Program/julia/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 	// Configure vscode-extensions.
 	"customizations": {
 		"vscode": {
-		  "extensions": ["julialang.language-julia"]
+		  "extensions": ["julialang.language-julia", "ms-toolsai.jupyter"]
 		}
 	  }
 }
