--- a/.gitea/workflows/Flow.yaml
+++ b/.gitea/workflows/Flow.yaml
@@ -172,6 +172,7 @@ jobs:
         uses: https://eoelab.org:1027/actions/build-push-action@v6
         with:
           context: Program/julia
+          build-args: JULIA_MIRROR=https://mirrors.cernet.edu.cn/julia
           tags: eoelab.org:1027/${{ gitea.repository }}:julia
 
   R:
