--- a/base/cpu/Dockerfile
+++ b/base/cpu/Dockerfile
@@ -3,8 +3,6 @@ FROM debian:bookworm-slim
 USER root
 
 # Configure environment
-ENV DEBIAN_FRONTEND=noninteractive \
-    # avoid some mistake, e.g. "jill"
-    HOME="/root" 
+ENV DEBIAN_FRONTEND=noninteractive 
 
 RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources 
