--- a/Program/zig/Dockerfile
+++ b/Program/zig/Dockerfile
@@ -11,4 +11,7 @@ FROM ghcr.io/eoeair/cenv:base
 
 COPY --from=builder /opt/zig /opt/zig
 
-ENV PATH="/opt/zig/bin:${PATH}"
+ENV PATH="/opt/zig:${PATH}"
+# install xz-utils for extract zls
+RUN apt-get update --yes && apt-get install --yes xz-utils && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
