--- a/Program/cpp/Dockerfile
+++ b/Program/cpp/Dockerfile
@@ -4,4 +4,5 @@ USER root
 
 RUN apt-get update --yes && apt-get install --yes g++ gdb cmake && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-WORKDIR "${HOME}"
+ENTRYPOINT ["tini", "-g", "--"]
+CMD ["bash"]
