--- a/base/cpu/Dockerfile
+++ b/base/cpu/Dockerfile
@@ -5,4 +5,6 @@ USER root
 # Configure environment
 ENV DEBIAN_FRONTEND=noninteractive 
 
-RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources 
+RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list.d/debian.sources && \
+    # Install tini for process management
+    apt-get update --yes && apt-get install --yes tini && apt-get clean && rm -rf /var/lib/apt/lists/*
