--- a/Program/zig/Dockerfile
+++ b/Program/zig/Dockerfile
@@ -2,10 +2,12 @@ FROM ghcr.io/eoeair/cenv:base AS builder
 
 ENV VERSION=0.14.1
 
+WORKDIR /opt
+
 RUN apt-get update --yes && apt-get install --yes wget xz-utils && \
-    wget -q https://ziglang.org/download/0.14.1/zig-x86_64-linux-$VERSION.tar.xz && \
+    wget -q https://ziglang.org/download/${VERSION}/zig-x86_64-linux-${VERSION}.tar.xz && \
     tar -xf zig-x86_64-linux-$VERSION.tar.xz && \
-    mv zig-x86_64-linux-$VERSION /opt/zig
+    mv zig-x86_64-linux-$VERSION zig
 
 FROM ghcr.io/eoeair/cenv:base
 
