--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -13,10 +13,15 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  packages: write
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   base:
-    runs-on: lxc
+    runs-on: arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:podman
     steps:
       - uses: actions/checkout@v4
       - uses: redhat-actions/buildah-build@v2
@@ -24,81 +29,78 @@ jobs:
           context: base
           containerfiles: base/Dockerfile
           tags: ghcr.io/${{ github.repository }}:base
-
-  program:
-    needs: base
-    runs-on: lxc
-    strategy:
-      matrix:
-        program: [c, cpp, python, zig]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: redhat-actions/buildah-build@v2
-        with:
-          context: Program/${{ matrix.program }}
-          containerfiles: Program/${{ matrix.program }}/Dockerfile
-          tags: ghcr.io/${{ github.repository }}:${{ matrix.program }}
-
-  gs:
-    needs: base
-    runs-on: lxc
-    strategy:
-      matrix:
-        gs: [mc_jre_17, mc_jre_21, steam]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: redhat-actions/buildah-build@v2
-        with:
-          context: GS/${{ matrix.gs }}
-          containerfiles: GS/${{ matrix.gs }}/Dockerfile
-          tags: ghcr.io/${{ github.repository }}:${{ matrix.gs }}
-
-  renv:
-    needs: base
-    runs-on: lxc
-    strategy:
-      matrix:
-        renv: [zine]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: redhat-actions/buildah-build@v2
-        with:
-          context: Renv/${{ matrix.renv }}
-          containerfiles: Renv/${{ matrix.renv }}/Dockerfile
-          tags: ghcr.io/${{ github.repository }}:${{ matrix.renv }}
-
-  push:
-    needs: [program, gs, renv]
-    runs-on: lxc
-    permissions:
-      packages: write
-    strategy:
-      max-parallel: 1
-      matrix:
-        tag: [base, c, cpp, python, zig, mc_jre_17, mc_jre_21, steam, zine]
-    steps:
-      - name: Prepare environment
-        run: |
-          sudo mkdir -p /run/user/1000
-          sudo chown -hR debian:debian /run/user/1000
       - uses: redhat-actions/podman-login@v1
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
-          auth_file_path: /run/user/1000/containers/auth.json
+      - uses: redhat-actions/push-to-registry@v2
+        with:
+          tags: ghcr.io/${{ github.repository }}:${{ matrix.tag }}
+      
+
+  program:
+    needs: base
+    runs-on: arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:podman
+    strategy:
+      matrix:
+        tag: [c, cpp, python, zig]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: redhat-actions/podman-login@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+      - uses: redhat-actions/buildah-build@v2
+        with:
+          context: Program/${{ matrix.tag }}
+          containerfiles: Program/${{ matrix.tag }}/Dockerfile
+          tags: ghcr.io/${{ github.repository }}:${{ matrix.tag }}
       - uses: redhat-actions/push-to-registry@v2
         with:
           tags: ghcr.io/${{ github.repository }}:${{ matrix.tag }}
 
+  gs:
+    needs: base
+    runs-on: arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:podman
+    strategy:
+      matrix:
+        tag: [mc_jre_17, mc_jre_21, steam]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: redhat-actions/buildah-build@v2
+        with:
+          context: GS/${{ matrix.tag }}
+          containerfiles: GS/${{ matrix.tag }}/Dockerfile
+          tags: ghcr.io/${{ github.repository }}:${{ matrix.tag }}
+
+  renv:
+    needs: base
+    runs-on: arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:podman
+    strategy:
+      matrix:
+        tag: [zine, podman]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: redhat-actions/buildah-build@v2
+        with:
+          context: Renv/${{ matrix.tag }}
+          containerfiles: Renv/${{ matrix.tag }}/Dockerfile
+          tags: ghcr.io/${{ github.repository }}:${{ matrix.tag }}
+
   cleanup:
-    needs: [push]
-    runs-on: lxc
-    permissions:
-      packages: write
+    needs: [program, gs, renv]
+    runs-on: arc
+    container:
+      image: ghcr.nju.edu.cn/eoeair/cenv:podman
     steps:
       - uses: camargo/delete-untagged-action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: cleanup
-        run: podman images | grep ghcr.io/${{ github.repository }} | awk '{ print $3 }' | xargs -r podman rmi -f
