--- a/Renv/podman/.devcontainer/devcontainer.json
+++ b/Renv/podman/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json. 
 // For config options, see the README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
-	"name": "zine",
-	"image": "ghcr.io/eoeair/cenv:zine" 
+	"name": "podman",
+	"image": "ghcr.io/eoeair/cenv:podman" 
 }
