remove podman(use kaniko)
update

--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -91,7 +91,7 @@ jobs:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
     strategy:
       matrix:
-        tag: [zine, podman]
+        tag: [zine]
     steps:
       - *checkout
       - *login
