--- a/Renv/mc_jre_21/Dockerfile
+++ b/Renv/mc_jre_21/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/eoeair/cenv:base AS builder
+FROM ghcr.io/eoeair/cenv:debian AS builder
 
 USER root
 
@@ -7,7 +7,7 @@ RUN apt-get update --yes && apt-get install --yes gnupg curl && \
     echo "deb [signed-by=/usr/share/keyrings/azul.gpg] https://repos.azul.com/zulu/deb stable main" | tee /etc/apt/sources.list.d/zulu.list && \
     apt-get update --yes && apt-get install --yes --no-install-recommends zulu21-ca-jre-headless  
 
-FROM ghcr.io/eoeair/cenv:base
+FROM ghcr.io/eoeair/cenv:debian
 
 COPY --from=builder /usr/lib/jvm/zulu21/ /usr/lib/jvm/zulu21/
 
