--- a/.Deprecated/Program/js/Dockerfile
+++ b/.Deprecated/Program/js/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/eoeair/cenv:base
+FROM ghcr.io/eoeair/cenv:debian
 
 RUN apt-get update --yes && apt-get install --yes --no-install-recommends nodejs npm && apt-get clean && rm -rf /var/lib/apt/lists/* && \
     npm config set registry https://registry.npmmirror.com
