--- a/.Deprecated/Renv/llama/Dockerfile
+++ b/.Deprecated/Renv/llama/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update --yes && apt-get install --yes cmake build-essential git && \
     cmake -B build -DBUILD_SHARED_LIBS=OFF && cmake --build build --config Release -j $(nproc) && \
     mv build/bin/* /usr/local/bin/
 
-FROM ghcr.io/eoeair/cenv:base
+FROM ghcr.io/eoeair/cenv:debian
 
 EXPOSE 80
 
