--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -18,10 +18,13 @@ permissions:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  base:
+  Base:
     runs-on: arc
     container:
       image: ghcr.nju.edu.cn/kaniko-build/dist/chainguard-dev-kaniko/executor:v1.25.1-debug
+    strategy:
+      matrix:
+        tag: [alpine, debian]
     steps:
       - &checkout
         run: |
@@ -43,9 +46,9 @@ jobs:
           EOF
       - run: |
           /kaniko/executor \
-            --context base \
-            --dockerfile base/Dockerfile \
-            --destination ghcr.io/${{ github.repository }}:base \
+            --context Base/${{ matrix.tag }} \
+            --dockerfile Base/${{ matrix.tag }}/Dockerfile \
+            --destination ghcr.io/${{ github.repository }}:${{ matrix.tag }} \
             --single-snapshot
 
   Denv:
