--- a/Denv/zig/Dockerfile
+++ b/Denv/zig/Dockerfile
@@ -1,19 +1,3 @@
-FROM ghcr.io/eoeair/cenv:debian AS builder
+FROM ghcr.io/eoeair/cenv:alpine
 
-ENV VERSION=0.15.1
-
-WORKDIR /opt
-
-RUN apt-get update --yes && apt-get install --yes wget xz-utils && \
-    wget -q https://ziglang.org/download/${VERSION}/zig-x86_64-linux-${VERSION}.tar.xz && \
-    tar -xf zig-x86_64-linux-$VERSION.tar.xz && \
-    mv zig-x86_64-linux-$VERSION zig
-
-FROM ghcr.io/eoeair/cenv:debian
-
-COPY --from=builder /opt/zig /opt/zig
-
-ENV PATH="/opt/zig:${PATH}"
-# install xz-utils for extract zls
-RUN apt-get update --yes && apt-get install --yes xz-utils && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache zig
